[gd_scene load_steps=3 format=2]

[ext_resource path="res://game/scripts/ui/menu/main_menu.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[node name="main_menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.101
anchor_right = 0.5
anchor_bottom = 0.165
margin_left = -34.5
margin_right = 34.5
margin_bottom = 14.0
custom_styles/normal = SubResource( 1 )
text = "Start Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 117.0
margin_top = 127.0
margin_right = 158.0
margin_bottom = 154.0

[node name="btn_start" type="Button" parent="VBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
text = "Start"

[node name="btn_settings" type="Button" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 63.0
margin_bottom = 44.0
text = "settings"

[node name="btn_exit" type="Button" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 63.0
margin_bottom = 68.0
text = "exit"

[node name="main_menu_animation_player" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="VBoxContainer/btn_start" to="." method="_on_btn_start_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_settings" to="." method="_on_btn_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/btn_exit" to="." method="_on_btn_exit_pressed"]
